objects/County__c.object
<CustomObject>
    <fields>
        <fullName>County_Population__c</fullName>
        <label>County Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_and_State_Fips__c</fullName>
        <label>County and State Fips</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Median_Income__c</fullName>
        <label>Median Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <label>Population</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_FIPS__c</fullName>
        <label>State FIPS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>county_fips__c</fullName>
        <label>county fips</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>County</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Low_Population_Counties_County</fullName>
        <filterScope>Queue</filterScope>
        <label>Low Population Counties</label>
        <queue>Low_Population_Counties</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>County Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>County</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>